# quintessence

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CompileShaders.cmake
include/common/: Config.hh  Exception.hh  ILogger.hh  LogManager.hh  Singleton.hh  TerminalLogger.hh
include/window/: Window.hh  WindowExceptions.hh  WindowManager.hh
src/: quintessence.cc
src/common/: Exception.cc  LogManager.cc  TerminalLogger.cc
src/window/: Window.cc  WindowManager.cc
